@@ -7,11 +7,15 @@
 require 'rubygems'
 
 module Kernel
-  alias gem_original_require require # :nodoc:
 
-  #
-  # We replace Ruby's require with our own, which is capable of
-  # loading gems on demand.
+  ##
+  # The Kernel#require from before RubyGems was loaded.
+
+  alias gem_original_require require
+
+  ##
+  # When RubyGems is required, Kernel#require is replaced with our own which
+  # is capable of loading gems on demand.
   #
   # When you call <tt>require 'x'</tt>, this is what happens:
   # * If the file can be loaded from the existing Ruby loadpath, it
@@ -22,8 +26,8 @@ module Kernel
   #
   # The normal <tt>require</tt> functionality of returning false if
   # that file has already been loaded is preserved.
-  #
-  def require(path) # :nodoc:
+
+  def require(path) # :doc:
     gem_original_require path
   rescue LoadError => load_error
     if load_error.message =~ /#{Regexp.escape path}\z/ and
@@ -34,5 +38,9 @@ module Kernel
       raise load_error
     end
   end
-end  # module Kernel
+
+  private :require
+  private :gem_original_require
+
+end
 
